feat: Modify 'GET monthly pt price list' api (#115)